_k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      name: hello-world
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: brud/hello-world:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: pod-port
      restartPolicy: Always
