_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
